Meluxina/Asynchronous-test-D-to-H-Measurements/build-4436069.out
============================================================
Stage 1: OpenMP offload + CUDA  (no NVHPC)
============================================================
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) env/release/2025.1
clang++ -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda -Xopenmp-target -march=sm_80 --cuda-path=/apps/USE/easybuild/release/2025.1/software/CUDA/12.8.0 -Wl,-rpath,/apps/USE/easybuild/release/2025.1/software/LLVM/20.1.7-GCCcore-14.2.0/lib -O3 -o version-1-off openmp-1.cc
clang++ -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda -Xopenmp-target -march=sm_80 --cuda-path=/apps/USE/easybuild/release/2025.1/software/CUDA/12.8.0 -Wl,-rpath,/apps/USE/easybuild/release/2025.1/software/LLVM/20.1.7-GCCcore-14.2.0/lib -O3 -o version-2-off openmp-2.cc
clang++ -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda -Xopenmp-target -march=sm_80 --cuda-path=/apps/USE/easybuild/release/2025.1/software/CUDA/12.8.0 -Wl,-rpath,/apps/USE/easybuild/release/2025.1/software/LLVM/20.1.7-GCCcore-14.2.0/lib -O3 -o version-4-off openmp-4.cc
nvcc -O3 -Xcompiler -fopenmp -arch=sm_80 -o version-1-cuda version-1.cu
nvcc -O3 -Xcompiler -fopenmp -arch=sm_80 -o version-2-cuda version-2.cu
version-2.cu(39): error: identifier "SIZE_MAX" is undefined
      if (N > (SIZE_MAX / sizeof(double))) {
               ^

1 error detected in the compilation of "version-2.cu".
make: *** [Makefile:41: version-2-cuda] Error 2
============================================================
Stage 2: OpenACC  (NVHPC)
============================================================
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) env/release/2025.1
nvc++ -fast -mp=gpu -cuda -gpu=cc80 -Minfo=accel -lcudart -o version-1-acc version-1.cc
nvc++ -fast -mp=gpu -cuda -gpu=cc80 -Minfo=accel -lcudart -o version-2-acc version-2.cc
"version-2.cc", line 29: error: identifier "SIZE_MAX" is undefined
      if (N > (SIZE_MAX / sizeof(double))) {
               ^

1 error detected in the compilation of "version-2.cc".
make: *** [Makefile:52: version-2-acc] Error 2

============================================================
Verifying binaries...
============================================================
  OK : version-1-off
  OK : version-2-off
  OK : version-4-off
  OK : version-1-cuda
  MISSING : version-2-cuda
  MISSING : version-4-cuda
  OK : version-1-acc
  MISSING : version-2-acc
  MISSING : version-4-acc

ERROR: 4 binary/binaries missing: version-2-cuda version-4-cuda version-2-acc version-4-acc
Run jobs will NOT start (afterok dependency will block them).
